[package]
name = "tip-payment-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
clap = { version = "=4.0", features = ["derive"] }
proc-macro2 = { workspace = true }
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
anyhow = "1.0"
jito-tip-payment = { path = "../programs/tip-payment", features = ["no-entrypoint"] }
 
